# yosina-data

./: .gitignore  .gitmodules  CONTRIBUTORS  Makefile  README.md  circled-or-squared.json  combined-chars.json  gen_tables.py  hyphens.json  ideographic-annotation-marks.json  ivs-svs-base-mappings.json  kanji-old-new-form.json  mathematical-alphanumerics.json  pyproject.toml  radicals.json  roman-numerals.json  spaces.json
